# STL-Rust

./: .gitignore  Cargo.toml  ICA-USAGE-MODE.txt  README.md
.github/workflows/: CI.yml  build-wheels.yml  deploy-docs.yml  publish-crate.yml  python-tests.yml  rust.yml
STL_types_traits/: Cargo.toml
STL_types_traits/src/: lib.rs  signal.rs
breach_comparison/: README.md  bench_all.m  breach_benchmark.m  breach_results_processing.py  check_monotonicity.py  compare_eval_results.py  comparison_summary.md  comparison_summary_rosi.md  comparison_summary_strict.md  notes.md  plot_all.sh  plot_approach_comparison.py  plot_bar_chart.py  plot_comparison_bar_chart.py  plot_depth_analysis.py  plot_performance_heatmap.py  plot_performance_ranking.py  plot_scalability.py  plot_window_analysis.py  plotting.py  plotting_utils.py  results_merging.py  results_to_csv.py  sandbox.py
breach_comparison/comparison/: README.md  __init__.py  helpers.py  rosi_comparison.py  strict_comparison.py  table_writer.py
breach_comparison/plotting/: breach_results_processing.py  notes.md  plot_approach_comparison.py  plot_bar_chart.py  plot_comparison_bar_chart.py  plot_depth_analysis.py  plot_performance_heatmap.py  plot_performance_ranking.py  plot_scalability.py  plot_window_analysis.py  plotting_utils.py
breach_comparison/results/: breach_benchmark_results_1-13.csv  breach_benchmark_results_14-17.csv  breach_benchmark_results_18-21.csv
experiments/: README.md  bench_all.sh  python_benchmark.py  requirements.txt  rtamt_cpponline_benchmark.py
experiments/data_analysis/: performance_comparison.py  regression_analysis.py
experiments/signal_generation/: signal_generator.py
festl/: .gitignore  Cargo.toml
festl-python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
festl-python/docs/: index.md  reference.md
festl-python/examples/: batch_update.py  semantics-comparison.ipynb  simple-example.py  variables_example.py
festl-python/python/festl_python/: __init__.py  festl_python.pyi
festl-python/src/: lib.rs
festl-python/tests/: __init__.py  test_festl_python.py
festl/benches/: monitor_benchmark.rs  paper_benchmark.rs
festl/examples/: simple_example.rs  (+1 more)
festl/festl-macros/: Cargo.toml
festl/festl-macros/src/: lib.rs
ostl/: Cargo.toml  formulas.csv  mqtt_plot.py
ostl-python/: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
ostl-python/docs/: index.md  reference.md
ostl-python/examples/: semantics-comparison.ipynb  simple-example.py
ostl-python/python/ostl_python/: __init__.py  ostl_python.pyi
ostl-python/src/: lib.rs
ostl-python/tests/: __init__.py  test_ostl_python.py
ostl/benches/: formula.csv  monitor_benchmark.rs  paper_benchmark.rs
ostl/benches/results/: paper_native_benchmark_results.csv  results_1-12.json  results_12.json  results_13-21.json  results_rosi.json
ostl/benches/signal_generation/: signal_generator.py
ostl/benches/signal_generation/signal_generation/signals/: signal_1000.csv  signal_20.csv
ostl/benches/signal_generation/signals/: signal_10000.csv  signal_20000.csv  signal_5000.csv
ostl/examples/: STL_monitor_demo.rs  eval_robustness_interval.rs  monitor_memory.rs  mqtt_plot.py  simple_example.rs  timestamp_validation.rs
ostl/ostl-macros/: Cargo.toml
ostl/ostl-macros/src/: lib.rs
ostl/src/: lib.rs  ring_buffer.rs  synchronizer.rs
ostl/src/legacy/: operators_naive.rs  operators_optimized.rs  robustness_naive.rs  robustness_optimized.rs
ostl/src/stl/: core.rs  formula_definition.rs  formulas.rs  macros.rs  mod.rs  monitor.rs  naive_operators.rs  operators.rs  operators_optimized.rs  parser.rs  robustness_cached.rs  robustness_naive.rs  robustness_optimized.rs
ostl/src/stl/operators/: atomic_operators.rs  binary_operators.rs  compiled_operator.rs  mod.rs  not_operator.rs  unary_temporal_operators.rs  until_operator.rs
ostl/tests/: macros_test.rs  monitor_build_fail_test.rs  monitor_rosi_test.rs  monitor_signal_sync_test.rs  monitor_test.rs  operators_test.rs  parser_parity_test.rs  pr.proptest-regressions  pr.rs  ringbuffer_test.rs  robustness_test.rs
ostl/tests/common/: mod.rs
ostl/tests/fixtures/: formulas.rs  mod.rs  oracles.rs  signals.rs
ostl/tests/legacy/: operators_test.rs  robustness_opt_test.rs  robustness_test.rs
performance-test/: ostl_benchmark_results.csv  ostl_benchmark_results.json  ostl_results.py  ostlpython_benchmark_results.csv  regression_analysis.py  regression_fit_results.csv  regression_plot_config.py  regression_plots.py  rtamt_benchmark_results.csv  rtamt_benchmark_results.json  rtamt_results.py  rtamt_sandbox.py  test_rtamt.py
python-examples/: test-python-updated.py  test-python.py
signal_generation/: signal.csv  signal_generator.py
simple-signal-app/: Cargo.toml
simple-signal-integrity/: Cargo.toml
simple_signal_app/: Cargo.toml
stl_types_traits/: Cargo.toml
(+59 files in other folders)
