[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "ostl-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
# Python source directory for additional files (like .pyi)
python-source = "python"

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings-python>=0.24",
]