[package]
name = "ostl"
version = "0.1.0"
edition = "2024"

[dependencies]
dyn-clone = "1.0.20"
piston_window = "0.112.0"
plotters = "0.3.7"
plotters-piston = "0.3.0"
proptest = "1.8.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rstest = "0.26.1"

[dev-dependencies]
criterion = "0.7.0"
dhat = "0.3.3"
serde_json = "1.0"

[[bench]]
name = "monitor_benchmark"
harness = false

[profile.release]
debug = true

[features]
dhat-heap = []
