[package]
name = "ostl"
version = "0.1.0"
edition = "2024"

[dependencies]
dyn-clone = "1.0.20"
proptest = "1.8.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rstest = "0.26.1"
rumqttc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = "0.7.0"
dhat = "0.3.3"

[[bench]]
name = "monitor_benchmark"
harness = false

[profile.release]
debug = true

[features]
dhat-heap = []
