[package]
name = "ostl"
version = "0.1.0"
edition = "2024"

[dependencies]
dyn-clone = "1.0.20"
ostl-macros = { path = "ostl-macros" }

[dev-dependencies]
proptest = "1.8.0"
rstest = "0.26.1"
pretty_assertions = "1.4.1"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rumqttc = "0.25.0"
criterion = "0.7.0"

[[bench]]
name = "monitor_benchmark"
harness = false

